--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "guzzlehttp/guzzle": "^6.1"
+        "guzzlehttp/guzzle": "^6.1",
+        "symfony/console": "^2.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
